// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when profilePicture={ uri: 'https://picsum.photos/200/300', key: 'randomkeyvalue' } 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexBasis": "20%",
      "marginRight": 5,
      "marginTop": "auto",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://picsum.photos/200/300",
        }
      }
      style={
        Object {
          "borderRadius": 50,
          "height": 50,
          "width": 50,
        }
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Lato_400Regular",
          },
          Object {
            "color": "#3C3C3C",
          },
          Object {
            "fontSize": 10,
            "marginTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      name
    </Text>
  </View>
</View>
`;

exports[`should match snapshot when profilePicture=null 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexBasis": "20%",
      "marginRight": 5,
      "marginTop": "auto",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "borderRadius": 50,
          "height": 50,
          "width": 50,
        }
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Lato_400Regular",
          },
          Object {
            "color": "#3C3C3C",
          },
          Object {
            "fontSize": 10,
            "marginTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      name
    </Text>
  </View>
</View>
`;
